# mirror-renderer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  README.md  Renderer.cpp  Renderer.h  camera.cpp  camera.h  composite.cpp  composite.h  compositor.cpp  experiment1.cpp  generate_projected_tiles.cpp  lumigraph_viewer.cpp  particle_compute_shader_example.cpp  phong_effect.cpp  phong_effect.h  phong_lighting_test.cpp  renderer.cpp  renderer.h  texture.h  virtual_copy_transform.cpp  virtual_copy_transform.h
geometry/: 3d_primitives.h  planar_tiling.h  tile_mesh.h  tile_mesh.inl.cpp  tuple.h  vertex.h
renderer/: CMakeLists.txt  camera.cpp  camera.h  gl_program_builder.h  material.h  renderer.cpp  renderer.h
shaders/: composite_frag.glsl  composite_vert.glsl  cubemap_frag.glsl  cubemap_vert.glsl  draw_lights_frag.glsl  draw_lights_vert.glsl  draw_normals_frag.glsl  draw_normals_vert.glsl  flat_color_frag.glsl  flat_color_vert.glsl  lumigraph_frag.glsl  phong_frag.glsl  phong_vertex.glsl  physical_frag.glsl  simple_particles.glsl  solid_color_frag.glsl  solid_color_vert.glsl  solid_texture_frag.glsl  solid_texture_vert.glsl  stddefs.glsl  stdlighting.glsl  texture_frag.glsl  tile_color_frag.glsl  tile_color_frag2.glsl  tile_color_vert.glsl  tile_view_frag.glsl  tile_view_vert.glsl
shaders/glsl330/: stddefs.glsl  stdlighting.glsl  stdutils.glsl
shaders/glsl430/: stddefs.glsl
tests/: CMakeLists.txt  test_planar_tiling.cpp  test_tuple.cpp
utils/: CMakeLists.txt  basic_window.h  geometry.h  gl_program_builder.h  gl_traits.h  gl_utils.cpp  gl_utils.h  gl_vao_generator.h  glm_hash.hpp  glm_traits.h  interactive_window.h  sdl_gl_window.cpp  sdl_gl_window.h  tuple.h
